--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "puppeteer": "^22.0.0", 
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "mongodb": "^6.3.0",
