--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://zarin_db_user:zarin22@cluster0.ukd7zib.mongodb.net/zarin?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://zarin_db_user:zarin22@cluster0.ukd7zib.mongodb.net/ZarrinApp?retryWrites=true&w=majority
 WALLET_ADDRESS=THtQH52yMFSsJAvFbKnBfYpbbDKWpKfJHS
 AMOUNT_IRT=5000000
